--- a/frontend/android/app/build.gradle
+++ b/frontend/android/app/build.gradle
@@ -31,8 +31,7 @@ android {
     }
 
     buildTypes {
-        debug {
-            minifyEnabled true
+        release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.debug
