--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   http: ^0.13.5
   shared_preferences: ^2.0.0
   flutter_secure_storage: ^8.0.0
+  image_picker: ^0.8.4
 
 
   # The following adds the Cupertino Icons font to your application.
